# datasyn-local

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.en.md  README.es.md  README.md  SECURITY.md  pyproject.toml
.cursor/: mcp.json  mcp.json.example
.cursor/agents/: datasyn-analyst.md
.cursor/rules/: datasyn-core.mdc  duckdb-sql.mdc  python-src.mdc  scripts-python.mdc
.cursor/skills/configure-duckdb-mcp/: SKILL.md
.cursor/skills/create-python-script/: SKILL.md
.logs/: README.md
config/: settings.yaml
data/duckdb/: README.md
data/landing/: README.md
docs/colors/: README.md
docs/diagrams/: README.md
queries/: ingestar_contrataciones_30dias.sql  ingestar_entidades.sql
samples/: example.csv
scripts/: README.md  configure_mcp.py  ingest.py  mcp_server.py  run_mcp.sh  stat_report.py
scripts/python/: README.md  analizar_contrataciones.py  analizar_pdfs_contrataciones.py  boletin_contrataciones_scraper.py  boletin_scraper.py  db.py  embed_readme_diagrams.py  extraer_entidades.py  helper_grafo_interactivo.py
scripts/sh/: README.md  bootstrap.sh
skills/: README.md
skills/configure-duckdb-mcp/: SKILL.md
skills/create-python-script/: SKILL.md
skills/create-table/: SKILL.md
skills/graph-analysis/: SKILL.md
skills/graph-ingest/: SKILL.md
skills/ingest-data/: SKILL.md
skills/ingest-data-bronze/: SKILL.md
skills/ingest-data-gold/: SKILL.md
skills/ingest-data-silver/: SKILL.md
skills/interactive-graph-reports/: README.md  SKILL.md
skills/sentiment-analysis/: SKILL.md
skills/setup-uv/: SKILL.md
skills/statistical-report/: SKILL.md
skills/web-scraping/: SKILL.md
src/: __init__.py  cli.py  db.py  trace.py
(+6 files in other folders)
