[project]
name = "datasyn-local"
version = "0.1.0"
description = "Local data analysis blueprint with DuckDB, MCP, and AI-assisted workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "textblob>=0.18.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "ipython>=8.0.0",
]

[project.scripts]
datasyn = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
